WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131263
REGRESSION (
r163914
): Application cache cannot be used in main frame
https://bugs.webkit.org/show_bug.cgi?id=131263
Summary
REGRESSION (r163914): Application cache cannot be used in main frame
Alexey Proskuryakov
Reported
2014-04-04 23:27:20 PDT
We can't look at main frame URL when loading in main frame, because it comes from an unrelated previous page. And when loading into a new page, it's just empty. <
rdar://problem/16532063
>
Attachments
proposed fix
(2.86 KB, patch)
2014-04-04 23:32 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
with release build fix
(3.08 KB, patch)
2014-04-04 23:37 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-04-04 23:27:50 PDT
Regression tests didn't detect this, because they all test appcache in subframes.
Alexey Proskuryakov
Comment 2
2014-04-04 23:32:29 PDT
Created
attachment 228660
[details]
proposed fix
Alexey Proskuryakov
Comment 3
2014-04-04 23:37:00 PDT
Created
attachment 228661
[details]
with release build fix
Sam Weinig
Comment 4
2014-04-05 16:21:29 PDT
Comment on
attachment 228661
[details]
with release build fix Can we add a regression test so this is caught in the future?
Alexey Proskuryakov
Comment 5
2014-04-05 17:19:32 PDT
Comment on
attachment 228661
[details]
with release build fix I couldn't make a test quickly enough, it would have to be somewhat tricky.
WebKit Commit Bot
Comment 6
2014-04-05 17:48:30 PDT
Comment on
attachment 228661
[details]
with release build fix Clearing flags on attachment: 228661 Committed
r166844
: <
http://trac.webkit.org/changeset/166844
>
WebKit Commit Bot
Comment 7
2014-04-05 17:48:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug